[gd_scene load_steps=8 format=3 uid="uid://bgvtbustdy2sp"]

[ext_resource type="PackedScene" uid="uid://cn5kiew6ulpyi" path="res://MainGame/3D/door.glb" id="1_4gvlo"]
[ext_resource type="Script" path="res://MainGame/Scripts/first_door.gd" id="1_ghf8l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ghf8l"]
size = Vector3(0.190189, 2.48865, 1.35248)

[sub_resource type="BoxShape3D" id="BoxShape3D_4gvlo"]
size = Vector3(1.72571, 1, 1)

[sub_resource type="Animation" id="Animation_ghf8l"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.22173, 0)]
}

[sub_resource type="Animation" id="Animation_8ja6b"]
resource_name = "exit_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.22173, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ja6b"]
_data = {
"Open": SubResource("Animation_ghf8l"),
"exit_open": SubResource("Animation_8ja6b")
}

[node name="firstDoor" type="Node3D"]
script = ExtResource("1_ghf8l")

[node name="door" parent="." instance=ExtResource("1_4gvlo")]

[node name="firstDoor_obj" type="StaticBody3D" parent="door"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="door/firstDoor_obj"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00290871, 1.27978, -0.703515)
shape = SubResource("BoxShape3D_ghf8l")

[node name="EnterArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.907047, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0506109, 0.493407, -0.71172)
shape = SubResource("BoxShape3D_4gvlo")

[node name="ExitArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.907047, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0455315, 0.493407, -0.71172)
shape = SubResource("BoxShape3D_4gvlo")

[node name="doorAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ja6b")
}

[connection signal="body_entered" from="EnterArea3D" to="." method="_on_enter_area_3d_body_entered"]
[connection signal="body_exited" from="EnterArea3D" to="." method="_on_enter_area_3d_body_exited"]
[connection signal="body_entered" from="ExitArea3D" to="." method="_on_exit_area_3d_body_entered"]
[connection signal="body_exited" from="ExitArea3D" to="." method="_on_exit_area_3d_body_exited"]
